; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/wps/extr_wps_common.c_wps_generate_pin.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/wps/extr_wps_common.c_wps_generate_pin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wps_generate_pin(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = bitcast i32* %4 to i8*
  %6 = call i64 @random_get_bytes(i8* %5, i32 4)
  %7 = icmp slt i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %18

9:                                                ; preds = %1
  %10 = load i32, i32* %4, align 4
  %11 = urem i32 %10, 10000000
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = mul i32 %12, 10
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @wps_pin_checksum(i32 %14)
  %16 = add i32 %13, %15
  %17 = load i32*, i32** %3, align 8
  store i32 %16, i32* %17, align 4
  store i32 0, i32* %2, align 4
  br label %18

18:                                               ; preds = %9, %8
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i64 @random_get_bytes(i8*, i32) #1

declare dso_local i32 @wps_pin_checksum(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
